--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -7,20 +7,20 @@ permissions:
   id-token: write
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 env:
   REGISTRY: ghcr.io
 jobs:
   build-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
       - name: version
         run: |
           VERSION=$( date '+%y%m%d.%H%M.0' )
           echo "VERSION:$VERSION"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - uses: actions/checkout@v3
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
       - name: Log into registry ${{ env.REGISTRY }}
