--- a/helm/templates/configmap-tgytchan.yaml
+++ b/helm/templates/configmap-tgytchan.yaml
@@ -2,13 +2,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ .Values.Namespace }}
   name: tgytchan
 data:
-  YamlConfigPath: "{{ .Values.YamlConfigPath }}"
-  KvToken: "{{ .Values.KvToken }}"
-  KvAccountId: "{{ .Values.KvAccountId }}"
-  KvNamespaceId: "{{ .Values.KvNamespaceId }}"
-  TgToken: "{{ .Values.TgToken }}"
-  TgBossChatId: "{{ .Values.TgBossChatId }}"
+  YamlConfigPath: "{{ $.Values.YamlConfigPath }}"
+  KvToken: "{{ $.Values.KvToken }}"
+  KvAccountId: "{{ $.Values.KvAccountId }}"
+  KvNamespaceId: "{{ $.Values.KvNamespaceId }}"
+  TgToken: "{{ $.Values.TgToken }}"
+  TgBossChatId: "{{ $.Values.TgBossChatId }}"
 
