--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -13,6 +13,7 @@ on:
       - main
     paths:
       - 'helm/**'
+      - '.github/workflows/helm.yaml'
 
 jobs:
   build-push:
@@ -21,8 +22,7 @@ jobs:
 
       - name: version
         run: |
-          VERSION=$( date '+%y.%m%d.%H%M' )
-          echo "VERSION:$VERSION"
+          VERSION=$( date '+%y.%m%d.%H%M' | sed 's/\.0*/./g' )
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
@@ -31,9 +31,10 @@ jobs:
         run: |
           sed -i -e "s/__VERSION__/$VERSION/g" helm/Chart.yaml
           cat helm/Chart.yaml
+          HELM_CHART_NAME=$( yq .name helm/Chart.yaml )
+          echo "HELM_CHART_NAME=$HELM_CHART_NAME" >> $GITHUB_ENV
 
-      - name: push
-        uses: bsord/helm-push@v4
+      - uses: bsord/helm-push@v4
         with:
           useOCIRegistry: true
           registry-url:  oci://ghcr.io/${{ github.repository }}
