ImageNameGithubTgTubeChan Release.Namespace actions/delete-package-versions

--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -1,8 +1,11 @@
 ---
+
 apiVersion: v1
 kind: ConfigMap
+
 metadata:
   name: {{ $.Release.Name }}-tgtubechan
+  namespace: {{ $.Release.Namespace }}
 
 data:
 
