--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: helm.tgtubechan
-description: Mirror a Youtube channel to a Telegram channel
+description: Telegram bot to mirror a Youtube channel to a Telegram channel
 type: application
 version: __VERSION__
 appVersion: __VERSION__
-home: https://github.com/shoce/tgtubechan/tree/main/helm/
+home: https://github.com/shoce/tgtubechan/
 
