--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -1,10 +1,9 @@
 ---
-
 apiVersion: v1
 kind: ConfigMap
 
 metadata:
-  name: {{ $.Release.Name }}-tgtubechan
+  name: {{ $.Values.AppName }}
   namespace: {{ $.Release.Namespace }}
 
 data:
