docker/build-push-action

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -43,6 +43,8 @@ jobs:
 
       - uses: docker/build-push-action@v6
         with:
+          driver: docker-container
+          provenance: false
           context: .
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
