--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - uses: shoce/action-version@v1
 
-      - uses: actions/checkout@v4
+      - uses: shoce/action-checkout@v1
 
       - uses: docker/setup-buildx-action@v3
 
@@ -48,12 +48,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: tag
-        run: |
-          git config user.name github-actions
-          git config user.email "github-actions@users.noreply.github.com"
-          git tag $VERSION
-          git push origin $VERSION
+      - uses: shoce/action-git-tag@v1
 
       - uses: actions/delete-package-versions@v5
         with:
