--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -3,5 +3,5 @@ name: helm.tgtubechan
 description: Telegram bot to mirror Youtube channels to Telegram channels
 type: application
 version: __VERSION__
-home: https://github.com/shoce/tgtubechan/
+home: https://github.com/shoce/tgtubechan/tree/main/helm/
 
